# mtg-price-watcher

./: .gitignore  DIARIO.md  README.md  collect.py  main.py  pyproject.toml
src/collector/: models.py  scryfall_client.py
src/dashboard/: app.py
src/storage/: duckdb_handler.py
